--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,17 +46,38 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name"
+    <!--<application android:icon="@drawable/icon" android:label="@string/app_name"
         android:hardwareAccelerated="true"
-        android:debuggable="true">
-        <activity android:name="FunFitness" android:label="@string/app_name"
+        android:debuggable="true"> -->
+        
+        <!-- Important -->
+        <application
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name" >
+        
+    	<!--<activity android:name="FunFitness" android:label="@string/app_name"
                 android:theme="@android:style/Theme.Black.NoTitleBar"
                 android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> -->
+        
+        	<activity
+  			android:name=".LFLibsSampleActivity" android:screenOrientation="portrait"
+  			android:label="@string/app_name"  android:launchMode="singleInstance" >
+    		<intent-filter>
+      			<action android:name="android.intent.action.MAIN" />
+      			<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
+      			<category android:name="android.intent.category.LAUNCHER" />
+    		</intent-filter>
+
+    		<meta-data
+    		android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
+    		android:resource="@xml/accessory_data" />
+  		</activity>
+        
     </application>
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
