--- a/plugin.xml
+++ b/plugin.xml
@@ -1,4 +1,4 @@
-<!--<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
     <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
             id="com.example.funfitness" version="0.0.1">
@@ -18,4 +18,4 @@
             <source-file src="src/com/example/funfitness/Echo.java" target-dir="src/com/example/funfitness" />
             <source-file src="libs/lfopen-api.jar" target-dir="libs" />
         </platform>
-    </plugin> -->
+    </plugin>
