--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
     <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
             id="com.example.funfitness" version="0.0.1">
-        <name>LFopen/name>
+        <name>LFopen</name>
         <description>Cordova LFopen API Plugin</description>
         <license>Apache 2.0</license>
         <keywords>cordova, lfopen</keywords>
