--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,8 @@
         <description>Cordova LFopen API Plugin</description>
         <license>Apache 2.0</license>
         <keywords>cordova, lfopen</keywords>
-        <js-module src="pluginInterface.js" name="lfopen">
-            <clobbers target="lfopen" />
+        <js-module src="pluginInterface.js" name="PluginInterface">
+            <clobbers target="pluginInterface" />
         </js-module>
         <platform name="android">
             <config-file target="res/xml/config.xml" parent="/*">
