--- a/plugin.xml
+++ b/plugin.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-            id="com.example.funfitness" version="0.0.1">
-        <name>LFopen</name>
-        <description>Cordova LFopen API Plugin</description>
-        <license>Apache 2.0</license>
-        <keywords>cordova, lfopen</keywords>
-        <js-module src="pluginInterface.js" name="PluginInterface">
-            <clobbers target="window.pluginInterface" />
-        </js-module>
-        <platform name="android">
-            <config-file target="res/xml/config.xml" parent="/*">
-                <feature name="Echo">
-                    <param name="android-package" value="com.example.funfitness.Echo"/>
-                </feature>
-            </config-file>
-            <source-file src="src/com/example/funfitness/Echo.java" target-dir="src/com/example/funfitness" />
-            <source-file src="libs/lfopen-api.jar" target-dir="libs" />
-        </platform>
-    </plugin>
+
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+           id="com.giedrius.lfopen"
+      version="0.0.1">
+    <name>LFopen</name>
+    <description>Sample Cordova LFopen Plugin</description>
+    <license>Apache 2.0</license>
+    <keywords>cordova, lfopen</keywords>
+
+
+    <js-module src="www/lfopen.js" name="LFopen">
+        <clobbers target="window.lfopen" />
+    </js-module>
+
+    <!-- android -->
+    <platform name="android">
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="LFopen">
+                <param name="android-package" value="com.giedrius.lfopen.LFopen"/>
+            </feature>
+        </config-file>
+
+        <source-file src="src/android/LFopen.java" target-dir="src/com/giedrius/lfopen" />
+		<source-file src="libs/lfopen-api.jar" target-dir="libs" />
+     </platform>          
+</plugin>
