--- a/plugin.xml
+++ b/plugin.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-           id="com.giedrius.lfopen"
-      version="0.0.1">
-    <name>LFopen</name>
-    <description>Sample Cordova LFopen Plugin</description>
-    <license>Apache 2.0</license>
-    <keywords>cordova, lfopen</keywords>
+<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+           id="org.devgirl.calendar"
+      version="0.1.0">
+    <name>Calendar</name>
+    <description>Sample PhoneGap Calendar Plugin</description>
+    <license>MIT</license>
+    <keywords>phonegap,calendar</keywords>
 
 
-    <js-module src="www/lfopen.js" name="LFopen">
-        <clobbers target="window.lfopen" />
+    <js-module src="www/calendar.js" name="Calendar">
+        <clobbers target="window.calendar" />
     </js-module>
 
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="LFopen">
-                <param name="android-package" value="com.giedrius.lfopen.LFopen"/>
+            <feature name="Calendar">
+                <param name="android-package" value="org.devgirl.calendar.Calendar"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/LFopen.java" target-dir="src/com/giedrius/lfopen" />
+        <source-file src="src/android/Calendar.java" target-dir="src/org/devgirl/calendar" />      
      </platform>          
 </plugin>
