--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,7 @@
             </feature>
         </config-file>
 
-        <source-file src="src/com/giedrius/plugin/Calendar.java" target-dir="src/com/giedrius/plugin" />
+        <source-file src="src/android/Calendar.java" target-dir="src/com/giedrius/plugin" />
 		<source-file src="libs/lfopen-api.jar" target-dir="libs" />
      </platform>          
 </plugin>
