--- a/plugin.xml
+++ b/plugin.xml
@@ -24,5 +24,6 @@
         <source-file src="src/android/Calendar.java" target-dir="src/com/giedrius/plugin" />
 		<source-file src="src/android/LFOpen.java" target-dir="src/com/giedrius/plugin" />
 		<source-file src="libs/lfopen-api.jar" target-dir="libs" />
+		<source-file src="accessory_data.xml" target-dir="res/xml" />
      </platform>          
 </plugin>
