--- a/plugin.xml
+++ b/plugin.xml
@@ -9,19 +9,19 @@
     <keywords>phonegap,calendar</keywords>
 
 
-    <js-module src="www/calendar.js" name="Calendar">
+    <js-module src="www/LFOpenPlugin.js" name="Calendar">
         <clobbers target="window.calendar" />
     </js-module>
 
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="Calendar">
-                <param name="android-package" value="com.giedrius.plugin.Calendar"/>
+            <feature name="LFOpenPlugin">
+                <param name="android-package" value="com.giedrius.plugin.LFOpenPlugin"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/Calendar.java" target-dir="src/com/giedrius/plugin" />
+        <source-file src="src/android/LFOpenPlugin.java" target-dir="src/com/giedrius/plugin" />
 		<source-file src="src/android/LFOpen.java" target-dir="src/com/giedrius/plugin" />
 		<source-file src="src/android/WorkoutActivity.java" target-dir="src/com/giedrius/plugin" />
 		<source-file src="libs/lfopen-api.jar" target-dir="libs" />
