--- a/plugin.xml
+++ b/plugin.xml
@@ -9,7 +9,7 @@
     <keywords>phonegap,calendar</keywords>
 
 
-    <js-module src="www/LFOpenPlugin.js" name="Calendar">
+    <js-module src="www/LFOpenPlugin.js" name="LFOpenPlugin">
         <clobbers target="window.calendar" />
     </js-module>
 
