--- a/plugin.xml
+++ b/plugin.xml
@@ -10,7 +10,7 @@
 
 
     <js-module src="www/lfopen.js" name="LFOpenPlugin">
-        <clobbers target="window.calendar" />
+        <clobbers target="window.lfopen" />
     </js-module>
 
     <!-- android -->
